refactor duplicate code in checkedOutBooks Repository, consolidated to single book repository class

--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ mainClassName= "com.twu.biblioteca.BibliotecaApp"
 
 repositories { jcenter() }
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.12'
     testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.+"
 }
 
 run {
